@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rpict.1,v 1.3 2004/01/01 19:31:45 greg Exp $"
+.\" RCSid "$Id: rpict.1,v 1.4 2005/01/18 00:33:15 greg Exp $"
 .TH RPICT 1 2/26/99 RADIANCE
 .SH NAME
 rpict - generate a RADIANCE picture
@@ -225,6 +225,23 @@ However, it may improve results with
 to use a very small fraction with the
 .I \-pm
 option, to avoid the ghosting effect of too few time samples.
+.TP
+.BI -pd \ dia
+Set the pixel depth-of-field aperture to a diameter of
+.I dia
+(in world coordinates).
+This will be used in conjunction with the view focal distance, indicated
+by the length of the view direction vector given in the
+.I \-vd
+option.
+It is not advisable to use this option in combination with the
+.I pdfblur(1)
+program, since one takes the place of the other.
+However, it may improve results with
+.I pdfblur
+to use a very small fraction with the
+.I \-pd
+option, to avoid the ghosting effect of too few samples.
 .TP
 .BI -dj \ frac
 Set the direct jittering to
@@ -768,5 +785,5 @@ option.
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-getinfo(1), lookamb(1), oconv(1), pfilt(1), pinterp(1), pmblur(1),
+getinfo(1), lookamb(1), oconv(1), pdfblur(1), pfilt(1), pinterp(1), pmblur(1),
 printf(3), ra_rgbe(1), rad(1), rtrace(1), rvu(1)
