@@ -1,4 +1,4 @@
-.\" RCSid "$Id: vwright.1,v 1.3 2004/01/01 19:31:45 greg Exp $"
+.\" RCSid "$Id: vwright.1,v 1.4 2005/01/18 00:33:15 greg Exp $"
 .TH VWRIGHT 1 8/29/96 RADIANCE
 .SH NAME
 vwright - normalize a RADIANCE view, shift it to the right
@@ -38,6 +38,7 @@ Npz:	view point z value
 Ndx:	view direction x value (normalized)
 Ndy:	view direction y value (normalized)
 Ndz:	view direction z value (normalized)
+Nd:	view focal distance
 Nux:	view up vector x value (normalized)
 Nuy:	view up vector y value (normalized)
 Nuz:	view up vector z value (normalized)
